test/tests/stages/18_structures/invalid_types/extra_credit/incompatible_union_types/return_type_mismatch.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 1
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: x
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: return_union
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: u
                  Bool: 1
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: x
                      Int: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: result
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 10
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: u
                    Bool: 1
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: result
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Structure: 
            TIdentifier: u
            Bool: 1
        None: 
